--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
 ✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
+ 
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
@@ -12,5 +12,304 @@
 
 .page {
   min-inline-size: 320px;
+  max-inline-size: 700px;
   min-block-size: 100dvb;
+  font-family: var(--font-family, --accent-family), sans-serif;
+  font-size: var(--font-size-main);
+  font-variation-settings: "wght"var(--wght-text);
+  background-color: var(--bg-color, #fff);
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: var(--bg-color);
+  outline: var(--outline);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding-block: clamp(7.5rem, 7.2799rem + 0.939vw, 8.125rem);
+  margin-block-start: 100px;
+  margin-block-end: 100px;
+  pointer-events: none;
+}
+
+.logo {
+  font-family: var(--accent-family), sans-serif;
+  font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
+}
+
+.title {
+  font-family: var(--accent-family), sans-serif;
+  font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
+  text-transform: uppercase;
+}
+
+.content {
+  display: grid;
+  justify-content: center;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.content__item {
+  background-color: var(--bg-color);
+  outline: var(--outline);
+}
+
+.content__item:last-child {
+  margin-block-end: 50px;
+}
+
+.heading {
+  font-variation-settings: "wght"var(--wght-heading);
+  font-size: var(--font-size-main);
+  pointer-events: none;
+  padding: 3px 24px 3px 10px;
+}
+
+.card {
+  position: relative;
+}
+
+.label {
+  position: absolute;
+  z-index: 1;
+  mix-blend-mode: hard-light;
+  -webkit-text-stroke: 1px #fff;
+  opacity: 0.5;
+  font-family: var(--accent-family), sans-serif;
+  font-size: var(--font-size-accent);
+  top: 25px;
+  right: 25px;
+  pointer-events: none;
+  line-height: 1.6;
+  text-transform: uppercase;
+}
+
+@supports (text-stroke: 1px var(--accent-color)) {
+  .label {
+    text-stroke: 1px var(--accent-color);
+  }
+}
+
+.img {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  outline: var(--outline);
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding-inline: 25px;
+  padding-block: 25px;
+}
+
+.text {
+  pointer-events: none;
+  line-height: 1.17;
+}
+
+.button__animation {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 7px;
+}
+
+.button {
+  position: relative;
+  background-color: var(--bg-color-button);
+  cursor: pointer;
+  outline: var(--outline);
+  border: none;
+  transition: 0.5s ease-in-out;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  inset: 0 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  background-color: #000;
+}
+
+.button:hover::after {
+  transform: scaleX(1);
+  transition: 0.5s ease-in-out;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button {
+  width: 130px;
+  height: 38px;
+  padding-block: 9px;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  color: #fff;
+  font-family: var(--accent-family), sans-serif;
+  font-size: var(--font-size-accent);
+}
+
+.card__icon-button {
+  height: 38px;
+  padding: 0;
+  border: transparent;
+  background-color: var(--bg-color-button);
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: var(--outline);
+  transition: 0.3s ease;
+}
+
+.like-icon {
+  cursor: pointer;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-block-end: 103px;
+}
+
+.footer__button {
+  padding: 15px 20px;
+}
+
+.floppy {
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  color: #fff;
+}
+
+dialog[open] {
+  width: clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.dialog__wrapper {
+  display: flex;
+  align-items: center;
+  gap: 21px;
+  padding-inline: 30px;
+}
+
+.dialog__text {
+  font-family: var(--accent-family), sans-serif;
+  font-size: var(--font-size-accent);
+  text-transform: uppercase;
+  line-height: 150%;
+  pointer-events: none;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+dialog[open].dialog_text {
+  text-transform: uppercase;
+}
+
+.dialog__floppy {
+  flex-shrink: 0;
+}
+
+.close__button {
+  width: clamp(16.0625rem, 15.2702rem + 3.3803vw, 18.3125rem);
+  padding: 9px 17px;
+  text-transform: uppercase;
+}
+
+.img__opacity {
+  filter: opacity(80%);
+}
+
+.img__sepia {
+  filter: sepia(0.2);
+}
+
+.img__grayscale {
+  filter: grayscale(70%);
+}
+
+.img__brightness {
+  filter: brightness(50%);
+}
+
+.img__contrast {
+  filter: contrast(96%);
+}
+
+.img__hue-rotate {
+  filter: hue-rotate(0.1turn);
+}
+
+.img__invert {
+  filter: invert(20%);
+}
+
+.img__saturate {
+  filter: saturate(250%) blur(1px);
+}
+
+@media (width <=375px) {
+  .heading {
+    padding: 4px 10px 6px;
+  }
+
+  .label {
+    right: 13px;
+  }
+
+  .content__item:last-child {
+    margin-block-end: 52px;
+  }
+
+  .footer__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .floppy {
+    width: 28px;
+    height: 28px;
+  }
 }
