--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,8 +5,8 @@
   font-weight: 400 785;
   src:
     local("Inter-Variable"),
-    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
-    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
+    url(./Inter-Variable.woff2) format("woff2 supports variations"),
+    url(./Inter-Variable.woff2) format("woff2-variations");
 }
 
 @font-face {
@@ -16,5 +16,5 @@
   font-weight: 400;
   src:
     local("PressStart2P-Regular"),
-    url("../fonts/PressStart2P-Regular.woff") format("woff");
+    url(./PressStart2P-Regular.woff) format("woff"); 
 }
