--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,9 @@
   min-inline-size: 320px;
   max-inline-size: 700px;
   min-block-size: 100dvb;
-  font-family: var(--font-family, --accent-family), sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-size: var(--font-size-main);
-  font-variation-settings: "wght"var(--wght-text);
+  font-variation-settings: "wght" var(--wght-text);
   background-color: var(--bg-color, #fff);
   background-image: var(--bg-image);
   background-attachment: fixed;
@@ -30,19 +30,19 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  padding-block: clamp(7.5rem, 7.2799rem + 0.939vw, 8.125rem);
+  padding-block: clamp(7.5rem, 6.9231rem + 2.4615vw, 8rem);
   margin-block-start: 100px;
-  margin-block-end: 100px;
+  margin-block-end: 102px;
   pointer-events: none;
 }
 
 .logo {
-  font-family: var(--accent-family), sans-serif;
+  font-family: var(--accent-family), fantasy;
   font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
 }
 
 .title {
-  font-family: var(--accent-family), sans-serif;
+  font-family: var(--accent-family), fantasy;
   font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
   text-transform: uppercase;
 }
@@ -68,10 +68,10 @@
 }
 
 .heading {
-  font-variation-settings: "wght"var(--wght-heading);
+  font-variation-settings: "wght" var(--wght-heading);
   font-size: var(--font-size-main);
   pointer-events: none;
-  padding: 3px 24px 3px 10px;
+  padding: 4px 10px;
 }
 
 .card {
@@ -82,9 +82,9 @@
   position: absolute;
   z-index: 1;
   mix-blend-mode: hard-light;
-  -webkit-text-stroke: 1px #fff;
+  text-shadow: 0 0 1px #fff;
   opacity: 0.5;
-  font-family: var(--accent-family), sans-serif;
+  font-family: var(--accent-family), fantasy;
   font-size: var(--font-size-accent);
   top: 25px;
   right: 25px;
@@ -93,9 +93,10 @@
   text-transform: uppercase;
 }
 
-@supports (text-stroke: 1px var(--accent-color)) {
+@supports (-webkit-text-stroke: 1px #fff) {
   .label {
-    text-stroke: 1px var(--accent-color);
+    -webkit-text-stroke: 1px #fff;
+    text-shadow: none;
   }
 }
 
@@ -108,7 +109,7 @@
   outline: var(--outline);
 }
 
-.article {
+.card__text {
   display: flex;
   flex-direction: column;
   gap: 27px;
@@ -134,7 +135,7 @@
   cursor: pointer;
   outline: var(--outline);
   border: none;
-  transition: 0.5s ease-in-out;
+  transition: box-shadow 0.3s ease;
 }
 
 .button::after {
@@ -151,12 +152,10 @@
 
 .button:hover::after {
   transform: scaleX(1);
-  transition: 0.5s ease-in-out;
 }
 
 .button:focus-visible {
   box-shadow: 2px 2px 0 var(--accent-color);
-  transition: box-shadow 0.3s ease;
 }
 
 .card__like-button {
@@ -170,7 +169,7 @@
   z-index: 1;
   mix-blend-mode: difference;
   color: #fff;
-  font-family: var(--accent-family), sans-serif;
+  font-family: var(--accent-family), fantasy;
   font-size: var(--font-size-accent);
 }
 
@@ -179,6 +178,7 @@
   padding: 0;
   border: transparent;
   background-color: var(--bg-color-button);
+  transition: outline 0.03s ease;
 }
 
 .card__icon-button:focus {
@@ -187,7 +187,6 @@
 
 .card__icon-button:focus-visible {
   outline: var(--outline);
-  transition: 0.3s ease;
 }
 
 .like-icon {
@@ -198,17 +197,19 @@
   opacity: 0;
 }
 
-.footer {
-  display: flex;
-  justify-content: center;
-  padding-block-end: 103px;
+.button__wrapper {
+  margin: 0 auto 103px;
 }
 
-.footer__button {
+.button__save {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   padding: 15px 20px;
 }
 
 .floppy {
+  align-items: center;
   position: relative;
   z-index: 1;
   mix-blend-mode: difference;
@@ -221,17 +222,17 @@ dialog[open] {
   align-items: center;
   flex-direction: column;
   gap: 30px;
+  padding: 30px;
 }
 
 .dialog__wrapper {
   display: flex;
   align-items: center;
   gap: 21px;
-  padding-inline: 30px;
 }
 
 .dialog__text {
-  font-family: var(--accent-family), sans-serif;
+  font-family: var(--accent-family), fantasy;
   font-size: var(--font-size-accent);
   text-transform: uppercase;
   line-height: 150%;
@@ -289,8 +290,13 @@ dialog[open].dialog_text {
 }
 
 @media (width <=375px) {
+  .header {
+    margin-block-start: 102px;
+    margin-block-end: 104px;
+  }
+
   .heading {
-    padding: 4px 10px 6px;
+    padding: 5px 10px;
   }
 
   .label {
@@ -301,13 +307,13 @@ dialog[open].dialog_text {
     margin-block-end: 52px;
   }
 
-  .footer__button {
+  .button__save {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
   }
-
+  
   .floppy {
     width: 28px;
     height: 28px;
